<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Localisation"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </android.support.design.widget.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/scan_localisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanning_button"/>
        <Button
            android:id="@+id/stopScan_localisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopScanning_button"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sentence_result"/>
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NULL"/>
    </LinearLayout>
</LinearLayout>