<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </android.support.design.widget.TabLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/scan_detection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanning_button"/>
        <Button
            android:id="@+id/stopScan_detection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopScanning_button"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"/>
        <EditText
            android:id="@+id/Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>
        <Button
            android:id="@+id/new_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New File"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler_detection"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>